spacing problem test fix 2

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -11756,7 +11756,7 @@ img.img-about {
   color: #ccc;
 }
 .team p {
-  overflow: hidden;
+
 }
 
 /* ===== 404 error page ===== */
